--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>strona zawierająca świczenia z flexa</title>
+    <title>strona zawierająca ćwiczenia z flexa</title>
     <link  rel="Stylesheet" type="text/css" href="style CSS/syntax.css" />
 
 
@@ -11,27 +11,12 @@
 
 <body>
 
-    <div class="glowny">
-        <div class="flex-container">
-
-            <div class="box one"></div>
-            <div class="box two"></div>
-            <div class="box thre"></div>
-            <div class="box for"></div>
-        </div>
-
-
-
+    <h1>Basic</h1>
+    <div clas="box">
+        <div class="clas box"></div>
     </div>
 
 
-
-
-  </div>
-
-
-   </div>
-    
 
 
 
