--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
 
 <body>
 
-    <h1>Basic</h1>
-    <div clas="box">
-        <div class="clas box"></div>
+    <h1>Loading Page</h1>
+    
+    <div class="box">
+        <div class="clas pudelko"></div>
     </div>
 
+    <div class="main">
+
+        <div class="booton 1"></div>
+        <div class="booton 2"></div>
+
+
+
+    </div>
+   
 
 
 
