grid-template-columns

--- a/grid-template-columns.html
+++ b/grid-template-columns.html
@@ -15,7 +15,7 @@
             text-align: center;
             background: orange;
             padding: 20px;
-            width: 100%;
+            width: 120px;
             margin: 0 auto;
           
 
