--- a/grid-rows.html
+++ b/grid-rows.html
@@ -30,7 +30,8 @@
             /* grid-template-columns: 1fr 1fr 1fr */
             /* grid-template-columns: 33.3% 33.3% 33.3% */
             grid-template-columns: repeat(3, 1fr);
-            grid-auto-rows: 200px
+            /*dostosowuje wysokość z teksetm na auto a pozostałe na 200px*/
+            grid-auto-rows: minmax(200px, auto)
            
             
         }
