--- a/grid/rozmieszczenie obszarow.html
+++ b/grid/rozmieszczenie obszarow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-    <link rel="stylesheet" href="css/idndex1.css">
+    <link rel="stylesheet" href="css/rozmieszczenie obszarow.css">
     <title>index1</title>
 </head>
 <body>
