--- a/CSS Clip Path Property/index.html
+++ b/CSS Clip Path Property/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Clip Path Property</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="inner">
+            <h1>Hey</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, ut maxime. Eius, consequuntur, illum omnis vero modi porro beatae deserunt distinctio maxime molestias molestiae eaque nisi! Debitis mollitia ad unde.</p>
+        </div>
+    </div>
     
 </body>
 </html>
