finisg efect two

--- a/CSS Clip Path Property/index.html
+++ b/CSS Clip Path Property/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>CSS Clip Path Property</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="inner">
-            <h1>Hey</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, ut maxime. Eius, consequuntur, illum omnis vero modi porro beatae deserunt distinctio maxime molestias molestiae eaque nisi! Debitis mollitia ad unde.</p>
-        </div>
+      <div class="inner">
+        <h1>Hey</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, ut
+          maxime. Eius, consequuntur, illum omnis vero modi porro beatae
+          deserunt distinctio maxime molestias molestiae eaque nisi! Debitis
+          mollitia ad unde.
+        </p>
+      </div>
     </div>
-    
-</body>
+
+    <div class="container_Two">
+      <div class="inner_Two">
+          <span>i</span>
+        <h1>Hey</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, ut
+          maxime. Eius, consequuntur, illum omnis vero modi porro beatae
+          deserunt distinctio maxime molestias molestiae eaque nisi! Debitis
+          mollitia ad unde.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
